<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/line_colors"/>
        
        <org.cyanogenmod.designertools.widget.DualColorPicker
            android:id="@+id/color_picker"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/include_keylines"/>

        <CheckBox
            android:id="@+id/include_keylines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/include_custom_grid_size"/>

        <CheckBox
            android:id="@+id/include_custom_grid_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <org.cyanogenmod.designertools.widget.VerticalSeekBar
            android:id="@+id/row_sizer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:max="10"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end">

            <org.cyanogenmod.designertools.widget.GridPreview
                android:id="@+id/grid_preview"
                android:layout_width="@dimen/grid_preview_width"
                android:layout_height="@dimen/grid_preview_height"
                android:layout_gravity="end"/>

            <SeekBar
                android:id="@+id/column_sizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:max="10"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>